--- a/research/04_training.ipynb
+++ b/research/04_training.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
     "        training = self.config.training\n",
     "        prepare_base_model = self.config.prepare_base_model\n",
     "        params = self.params\n",
-    "        training_data = os.path.join(self.config.data_ingestion.inzip_dir, \"Chicken-Fecal-Images\")\n",
+    "        training_data = os.path.join(self.config.data_ingestion.unzip_dir, \"Chicken-Fecal-Images\")\n",
     "        create_directories([\n",
     "            Path(training.root_dir)\n",
     "        ])\n",
@@ -134,6 +134,197 @@
     "        )\n",
     "\n",
     "        return training_config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PrepareCallback:\n",
+    "    def __init__(self, config: PrepareCallbacksConfig):\n",
+    "        self.config = config\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    @property\n",
+    "    def _create_tb_callbacks(self):\n",
+    "        timestamp = time.strftime(\"%Y-%m-%d-%H-%M-%S\")\n",
+    "        tb_running_log_dir = os.path.join(\n",
+    "            self.config.tensorboard_root_log_dir,\n",
+    "            f\"tb_logs_at_{timestamp}\",\n",
+    "        )\n",
+    "        return tf.keras.callbacks.TensorBoard(log_dir=tb_running_log_dir)\n",
+    "    \n",
+    "\n",
+    "    @property\n",
+    "    def _create_ckpt_callbacks(self):\n",
+    "        return tf.keras.callbacks.ModelCheckpoint(\n",
+    "            filepath=self.config.checkpoint_model_filepath,\n",
+    "            save_best_only=True\n",
+    "        )\n",
+    "\n",
+    "\n",
+    "    def get_tb_ckpt_callbacks(self):\n",
+    "        return [\n",
+    "            self._create_tb_callbacks,\n",
+    "            self._create_ckpt_callbacks\n",
+    "        ]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import urllib.request as request\n",
+    "from zipfile import ZipFile\n",
+    "import tensorflow as tf\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Training:\n",
+    "    def __init__(self, config: TrainingConfig):\n",
+    "        self.config = config\n",
+    "    \n",
+    "    def get_base_model(self):\n",
+    "        self.model = tf.keras.models.load_model(\n",
+    "            self.config.updated_base_model_path\n",
+    "        )\n",
+    "    \n",
+    "    def train_valid_generator(self):\n",
+    "\n",
+    "        datagenerator_kwargs = dict(\n",
+    "            rescale = 1./255,\n",
+    "            validation_split=0.20\n",
+    "        )\n",
+    "\n",
+    "        dataflow_kwargs = dict(\n",
+    "            target_size=self.config.params_image_size[:-1],\n",
+    "            batch_size=self.config.params_batch_size,\n",
+    "            interpolation=\"bilinear\"\n",
+    "        )\n",
+    "\n",
+    "        valid_datagenerator = tf.keras.preprocessing.image.ImageDataGenerator(\n",
+    "            **datagenerator_kwargs\n",
+    "        )\n",
+    "\n",
+    "        self.valid_generator = valid_datagenerator.flow_from_directory(\n",
+    "            directory=self.config.training_data,\n",
+    "            subset=\"validation\",\n",
+    "            shuffle=False,\n",
+    "            **dataflow_kwargs\n",
+    "        )\n",
+    "\n",
+    "        if self.config.params_is_augmentation:\n",
+    "            train_datagenerator = tf.keras.preprocessing.image.ImageDataGenerator(\n",
+    "                rotation_range=40,\n",
+    "                horizontal_flip=True,\n",
+    "                width_shift_range=0.2,\n",
+    "                height_shift_range=0.2,\n",
+    "                shear_range=0.2,\n",
+    "                zoom_range=0.2,\n",
+    "                **datagenerator_kwargs\n",
+    "            )\n",
+    "        else:\n",
+    "            train_datagenerator = valid_datagenerator\n",
+    "\n",
+    "        self.train_generator = train_datagenerator.flow_from_directory(\n",
+    "            directory=self.config.training_data,\n",
+    "            subset=\"training\",\n",
+    "            shuffle=True,\n",
+    "            **dataflow_kwargs\n",
+    "        )\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def save_model(path: Path, model: tf.keras.Model):\n",
+    "        model.save(path)\n",
+    "\n",
+    "\n",
+    "    def train(self, callback_list: list):\n",
+    "        self.steps_per_epoch = self.train_generator.samples // self.train_generator.batch_size\n",
+    "        self.validation_steps = self.valid_generator.samples // self.valid_generator.batch_size\n",
+    "\n",
+    "        self.model.fit(\n",
+    "            self.train_generator,\n",
+    "            epochs=self.config.params_epochs,\n",
+    "            steps_per_epoch=self.steps_per_epoch,\n",
+    "            validation_steps=self.validation_steps,\n",
+    "            validation_data=self.valid_generator,\n",
+    "            callbacks=callback_list\n",
+    "        )\n",
+    "\n",
+    "        self.save_model(\n",
+    "            path=self.config.trained_model_path,\n",
+    "            model=self.model\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-06-03 03:10:28,665: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-06-03 03:10:28,669: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-06-03 03:10:28,671: INFO: common: created directory at: artifacts]\n",
+      "[2024-06-03 03:10:28,674: INFO: common: created directory at: artifacts\\prepare_callbacks\\checkpoint_dir]\n",
+      "[2024-06-03 03:10:28,676: INFO: common: created directory at: artifacts\\prepare_callbacks\\tensorboard_log_dir]\n",
+      "[2024-06-03 03:10:28,678: INFO: common: created directory at: artifacts\\training]\n",
+      "Found 145 images belonging to 2 classes.\n",
+      "Found 586 images belonging to 2 classes.\n",
+      "Epoch 1/5\n",
+      "36/36 [==============================] - 96s 3s/step - loss: 7.1949 - accuracy: 0.7211 - val_loss: 5.2932 - val_accuracy: 0.2917\n",
+      "Epoch 2/5\n",
+      "36/36 [==============================] - 77s 2s/step - loss: 4.8536 - accuracy: 0.7596 - val_loss: 0.7529 - val_accuracy: 0.9028\n",
+      "Epoch 3/5\n",
+      "36/36 [==============================] - 81s 2s/step - loss: 2.0380 - accuracy: 0.8333 - val_loss: 13.8120 - val_accuracy: 0.7778\n",
+      "Epoch 4/5\n",
+      "36/36 [==============================] - 86s 2s/step - loss: 2.2764 - accuracy: 0.8509 - val_loss: 2.1316 - val_accuracy: 0.7361\n",
+      "Epoch 5/5\n",
+      "36/36 [==============================] - 86s 2s/step - loss: 1.0776 - accuracy: 0.8614 - val_loss: 0.5010 - val_accuracy: 0.9306\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    config = ConfigurationManager()\n",
+    "    prepare_callbacks_config = config.get_prepare_callback_config()\n",
+    "    prepare_callbacks = PrepareCallback(config=prepare_callbacks_config)\n",
+    "    callback_list = prepare_callbacks.get_tb_ckpt_callbacks()\n",
+    "\n",
+    "    training_config = config.get_training_config()\n",
+    "    training = Training(config=training_config)\n",
+    "    training.get_base_model()\n",
+    "    training.train_valid_generator()\n",
+    "    training.train(\n",
+    "        callback_list=callback_list\n",
+    "    )\n",
+    "    \n",
+    "except Exception as e:\n",
+    "    raise e"
    ]
   }
  ],
